force-app/main/default/objects/PromptToFlow_Config__c/PromptToFlow_Config__c.object-meta.xml
<CustomObject>
    <label>PromptToFlow Configuration</label>
    <nameField>
        <length>80</length>
        <label>PromptToFlow Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PromptToFlow Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>