force-app/main/default/objects/PromptToFlow_Config__c/fields/Configuration_JSON__c.field-meta.xml
<CustomField>
    <fullName>Configuration_JSON__c</fullName>
    <label>Configuration JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>