force-app/main/default/objects/PromptToFlow_Config__c/fields/Generate_Parser_On_Save__c.field-meta.xml
<CustomField>
    <fullName>Generate_Parser_On_Save__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate Parser On Save</label>
    <type>Checkbox</type>
</CustomField>