force-app/main/default/objects/PromptToFlow_Config__c/fields/Invocable_Action_Label__c.field-meta.xml
<CustomField>
    <fullName>Invocable_Action_Label__c</fullName>
    <label>Invocable Action Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>