force-app/main/default/objects/PromptToFlow_Config__c/fields/Parser_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Parser_Class_Name__c</fullName>
    <label>Parser Class Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>